--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="">
+    <meta name="description" content="Keyboard by FCT">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Keyboard by FCT</title>
-		<link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
-		<link href="css/main.css" rel="stylesheet" type="text/css" media="screen" />
+		<link href="http://fonts.googleapis.com/css?family=Oswald:400,300" rel="stylesheet" >
+		<link href="http://fonts.googleapis.com/css?family=Abel" rel="stylesheet" type="text/css">
+		<link href="css/main.css" rel="stylesheet" media="screen" />
 </head>
 <body>
 <div id="wrapper">
