--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 	    <!-- end #page -->
 	</div>
 	<div id="footer">
-	    <p>Copyright (c) 2012 Sitename.com. All rights reserved.</p>
+	    <p>Copyright &copy; 2012 Sitename.com. All rights reserved.</p>
 	</div>
 <!-- end #footer -->
 </body>
