make banner image responsive

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	        </header>
 	        <div id="banner">
 	            <div class="content">
-								<img src="img/img02.jpg" width="1000" height="300" alt="" />
+								<img src="img/img02.jpg" alt="banner" />
 							</div>
 	        </div>
 	    </div>
