add media queries and floats to CSS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="Keyboard by FCT">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Keyboard by FCT</title>
 		<link href="http://fonts.googleapis.com/css?family=Oswald:400,300" rel="stylesheet" >
 		<link href="http://fonts.googleapis.com/css?family=Abel" rel="stylesheet" type="text/css">
@@ -19,11 +19,11 @@
 	            </div>
 	            <nav id="menu" class="site-container">
 	                <ul>
-	                    <li class="current_page_item"><a href="#">Homepage</a></li>
-	                    <li><a href="#">Blog</a></li>
-	                    <li><a href="#">Photos</a></li>
-	                    <li><a href="#">About</a></li>
-	                    <li><a href="#">Contact</a></li>
+	                    <li class="current_page_item"><a href="#">Homepage</a></li><li>
+	                    <a href="#">Blog</a></li><li>
+	                    <a href="#">Photos</a></li><li>
+	                    <a href="#">About</a></li><li>
+	                    <a href="#">Contact</a></li>
 	                </ul>
 	            </nav>
 	        </header>
